Fix smooth-scroll and snap-align

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,15 @@
 // Ancoraggio verticale
+:root {
+  --text-color: #00ffee;
+  --text-color-two: #bbbbbb;
+  --white-color: #ffffff;
+  --body-background: #0c0c1d;
+  --sliding-text: #ffffff09;
+}
 
 html {
   position: relative;
 }
-
 
 * {
   padding: 0;
@@ -18,7 +24,7 @@ html {
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: #00ffee;/* Colore del pollice della scrollbar */
+  background-color: var(--text-color);/* Colore del pollice della scrollbar */
   border-radius: 10px; /* Arrotondamento della scrollbar */
 }
 
@@ -28,7 +34,7 @@ html {
 
 
 body {
-  background-color: #0c0c1d;
+  background-color: var(--body-background);
   color: lightgray;
   position: relative;
   overflow-x: hidden;
@@ -47,7 +53,16 @@ section {
   overflow: hidden;
   position: relative;
   transition: transform 0.6s ease-in-out; /* Transizione fluida */
-  scroll-snap-align: start;
+  
+  
+  &.snap-start {
+    scroll-snap-align: start;
+  }
+
+  &.snap-none {
+    scroll-snap-align: none;
+  }
+
   @media (max-width: 738px) {
     overflow-y: auto;
   }
