--- a/src/components/About/About.styles.scss
+++ b/src/components/About/About.styles.scss
@@ -12,7 +12,7 @@
     font-size: clamp(14px, 2vw, 20px);
     
     h1 {
-        color: #00ffee;
+        color: var(--text-color);
         font-size: 55px;
         text-align: center;
     }
@@ -22,7 +22,7 @@
             color: rgb(187, 187, 187);
 
             a {
-                color: #00ffee;
+                color: var(--text-color);
 
                 &:hover {
                     color: inherit;
