--- a/src/components/Sidebar/Sidebar.styles.scss
+++ b/src/components/Sidebar/Sidebar.styles.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: white;
+    background-color: var(--white-color);
     color: black;
     z-index: 100;
 
